--- a/Week3/Homework/Untitled-2.css
+++ b/Week3/Homework/Untitled-2.css
@@ -6,15 +6,14 @@
 }
 
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #589c48;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  background-color: #333;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
 }
-
 .d-flex {
   display: flex;
 }
@@ -30,7 +29,6 @@ body {
   background-color: #333;
   color: white;
 }
-
 .btn-lg {
   padding: 1rem 4rem 1rem 4rem;
   font-size: 1.2rem;
@@ -42,11 +40,9 @@ nav {
   left: 0px;
   width: 100%;
   height: 50px;
-  background-color: #733381;
-  color: white;
+  background-color: white;
   z-index: 1;
 }
-
 nav > div {
   height: 100%;
   display: flex;
@@ -57,7 +53,6 @@ nav > div {
 nav > div > h1 {
   cursor: pointer;
 }
-
 nav > div > h1:hover {
   color: mediumseagreen;
 }
@@ -68,28 +63,22 @@ nav > div > ul {
   justify-content: center;
   align-items: center;
 }
-
 nav > div > ul > li {
   padding: 0.2rem 1rem 0.2rem 1rem;
   cursor: pointer;
 }
-
 nav > div > ul > li:last-child {
   padding-right: 0px;
 }
-
 nav > div > ul > li:hover {
   color: mediumseagreen;
 }
 
 #showcase {
   height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1488229297570-58520851e868?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80);
-  background-position: center;
-  color: #994fb2;
+  background-color: mediumseagreen;
+  color: white;
   display: flex;
-  opacity: 0.8;
-  font-style: ;
 }
 
 #showcase > div {
@@ -114,7 +103,7 @@ nav > div > ul > li:hover {
 
 #cards {
   height: 100vh;
-  background-color: #fbb149;
+  background: steelblue;
   color: white;
   display: flex;
 }
@@ -125,7 +114,7 @@ nav > div > ul > li:hover {
   justify-content: center;
 }
 
-#cards .card {
+#card .card {
   padding: 2rem;
   margin: 0 1rem 0 1rem;
   height: 60%;
@@ -137,20 +126,17 @@ nav > div > ul > li:hover {
   border: 3px solid white;
   border-radius: 5px;
 }
-
 #cards div i {
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
 }
-
 #cards .card div .lead {
   text-align: center;
   font-size: 1.7rem;
-  font-weight: bold;
+  text-emphasis: bold;
   margin-bottom: 1rem;
 }
-
-#cards .card div p {
+#card .card div p {
   text-align: justify;
 }
 
@@ -158,61 +144,20 @@ footer {
   background-color: #333;
   color: white;
 }
-
 footer .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
 footer .container h3 {
   margin: 2rem 0 2rem 0;
 }
-
 footer .container p {
   margin-bottom: 1rem;
 }
-
 footer .container a {
   color: white;
   margin-bottom: 1rem;
 }
-
-@media screen and (max-width: 500px) {
-  :root {
-    font-size: 10px;
-  }
-
-  .container {
-    max-width: 350px;
-  }
-
-  #showcase .container p {
-    padding: 0 3rem 0 3rem;
-  }
-
-  #cards .container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
-  }
-
-  #cards .card {
-    height: 30%;
-  }
-}
-
-@media screen and (max-height: 500px) {
-  #cards {
-    height: 300%vh;
-  }
-  #cards .container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
-    #cards .card {
-      height: 30%;
-    }
-
-}
+/*media query*/
