--- a/Week3/Homework/flex.css
+++ b/Week3/Homework/flex.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #696f99
+  background-color: #fed001
 }
 
 .container {
@@ -85,11 +85,11 @@ nav > div > ul > li:hover {
 
 #showcase {
   height: 100vh;
-  background-image: url(https://images.unsplash.com/photo-1494500764479-0c8f2919a3d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
+  background-image: url(/Atlas/Media/Images/JPEG/IMG_0175.jpg);
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  background-size: cover ;
+  background-size: cover;
   padding-top: 2vh;
 }
 
