--- a/Week4/Homework4/Todo project/todo.css
+++ b/Week4/Homework4/Todo project/todo.css
@@ -141,3 +141,8 @@ h1 {
   box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.4s ease 0s;
 }
+
+.completed {
+  color: gray;
+  text-decoration: line-through;
+}
