--- a/Week3/styles.css
+++ b/Week3/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #333;
 }
 
@@ -14,6 +14,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
+
 .d-flex {
   display: flex;
 }
@@ -29,6 +30,7 @@ body {
   background-color: #333;
   color: white;
 }
+
 .btn-lg {
   padding: 1rem 4rem 1rem 4rem;
   font-size: 1.2rem;
@@ -40,9 +42,11 @@ nav {
   left: 0px;
   width: 100%;
   height: 50px;
-  background-color: white;
+  background-color: #333;
+  color: white;
   z-index: 1;
 }
+
 nav > div {
   height: 100%;
   display: flex;
@@ -53,6 +57,7 @@ nav > div {
 nav > div > h1 {
   cursor: pointer;
 }
+
 nav > div > h1:hover {
   color: mediumseagreen;
 }
@@ -63,13 +68,16 @@ nav > div > ul {
   justify-content: center;
   align-items: center;
 }
+
 nav > div > ul > li {
   padding: 0.2rem 1rem 0.2rem 1rem;
   cursor: pointer;
 }
+
 nav > div > ul > li:last-child {
   padding-right: 0px;
 }
+
 nav > div > ul > li:hover {
   color: mediumseagreen;
 }
@@ -103,7 +111,7 @@ nav > div > ul > li:hover {
 
 #cards {
   height: 100vh;
-  background: steelblue;
+  background-color: steelblue;
   color: white;
   display: flex;
 }
@@ -114,7 +122,7 @@ nav > div > ul > li:hover {
   justify-content: center;
 }
 
-#card .card {
+#cards .card {
   padding: 2rem;
   margin: 0 1rem 0 1rem;
   height: 60%;
@@ -126,17 +134,20 @@ nav > div > ul > li:hover {
   border: 3px solid white;
   border-radius: 5px;
 }
+
 #cards div i {
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
 }
+
 #cards .card div .lead {
   text-align: center;
   font-size: 1.7rem;
-  text-emphasis: bold;
+  font-weight: bold;
   margin-bottom: 1rem;
 }
-#card .card div p {
+
+#cards .card div p {
   text-align: justify;
 }
 
@@ -144,20 +155,61 @@ footer {
   background-color: #333;
   color: white;
 }
+
 footer .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 footer .container h3 {
   margin: 2rem 0 2rem 0;
 }
+
 footer .container p {
   margin-bottom: 1rem;
 }
+
 footer .container a {
   color: white;
   margin-bottom: 1rem;
 }
-/*media query*/
+
+@media screen and (max-width: 500px) {
+  :root {
+    font-size: 10px;
+  }
+
+  .container {
+    max-width: 350px;
+  }
+
+  #showcase .container p {
+    padding: 0 3rem 0 3rem;
+  }
+
+  #cards .container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+
+  #cards .card {
+    height: 30%;
+  }
+}
+
+@media screen and (max-height: 500px) {
+  #cards {
+    height: 300%vh;
+  }
+  #cards .container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    #cards .card {
+      height: 30%;
+    }
+  }
+}
