--- a/Week7/ClockHw/CSS/clock.css
+++ b/Week7/ClockHw/CSS/clock.css
@@ -1,9 +1,22 @@
 
+body{
+  background: rgb(247, 3, 255);
+  background: linear-gradient(90deg, rgba(211, 12, 211, 0.575) 0%, rgba(121, 9, 116, 0.562) 35%, rgba(195, 0, 255, 0.863) 100%);
+}
 #clock {
     font-size: 175px;
-    width: 900px;
-    margin: 200px;
-    text-align: center;
-    border: 2px solid black;
+    width: auto;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.493);
+    border: 2px solid rgba(253, 0, 253, 0.26);
     border-radius: 20px;
+    box-shadow: 0px 0px 259px 194px rgba(255,221,0,0.56);
+  }
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
   }
